[package]
name = "apiety"
version = "0.1.0"
authors = ["Benjamin Bäumler <benjamin.baeumler@qqwa.de>"]
edition = "2018"

[dependencies]
sysinfo = "0.8.0"
regex = "1.0"
pnet = "0.22.0"
pcap = "0.7"
rust-crypto = "0.2.36"
log = "0.4"
byteorder = "1.3.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "handleapi", "memoryapi", "errhandlingapi"] }
